--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
+        "laravel/socialite": "*",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
