--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
+        "files": [
+            "app/Helper/helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
